<resources>
    <string name="app_name">PetDetective</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pet Detectvie</string>
    <string name="nav_header_subtitle">support@petdetecive.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_contact">Contact</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirm_password">Confirm Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pet_descrption">This is Percy. He just walked away about 30 minutes ago near Hermitage in McGehee Estates.                  He is chipped. Please message me if you find him.</string>
</resources>
